--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URI = mongodb+srv://orebiecommerce:KpALsX4eIivjTVZN@cluster0.05wjkat.mon
 BASE_URL = /api/v1
 AUTH_URL = /authentication
 SECRET_TOKEN = rony
+# MERCHANT_PASSWORD = req.headers.authorization.split('@')[2]
